--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -161,7 +161,9 @@ footer p {
 
 .button-effect {
   position: relative;
-  box-shadow: 2px 2px black;
+  top: 0px;
+  left: 0px;
+  box-shadow: 3px 3px black;
   border: 2px solid black;
   border-radius: 10px;
   cursor: pointer;
@@ -169,11 +171,12 @@ footer p {
   width: fit-content;
   width: -moz-fit-content;
   font-family: 'Prompt';
+  transition: 0.075s ease-in;
 }
 
 .button-effect:active {
-  top: 2px;
-  left: 2px;
+  top: 3px;
+  left: 3px;
   box-shadow: 0 0;
 }
 
