--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@400;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;700;800;900&display=swap');
 
 $green: #50ffaf;
 $blue: #4b69ff;
@@ -69,6 +69,7 @@ $black-border: $border-small solid black;
 
         p {
           margin: 20px 0 10px;
+          text-align: center;
         }
 
         .project-techs-container {
@@ -77,7 +78,7 @@ $black-border: $border-small solid black;
           flex-wrap: wrap;
           width: -moz-fit-content;
           width: fit-content;
-          
+
           div {
             font-weight: bold;
             margin: 5px 5px;
