add drawer contact and drawer nav functionality

--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -27,7 +27,7 @@ $black-border: $border-small solid black;
         flex-direction: column;
 
         li {
-          margin: 15px 0;
+          margin: 15px 0 !important;
 
           a,
           button {
