--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,15 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@400;700;800;900&display=swap');
-
-$green: #50ffaf;
-$blue: #4b69ff;
-$magenta: #ff00ff;
-$yellow: #f8ff1e;
-$violet: #9c7bff;
-$cyan: #45f9ff;
-$pink: #ff459c;
-$red: #f54c40;
-$border-small: 3px;
-$black-border: $border-small solid black;
+@import 'variables';
 
 .projectsPage {
   background: $green;
